Fixed Tech Stack alignment
- Fixed CSS for Tech Stack list alignment,
- Updated Tech Stack fields

--- a/style.css
+++ b/style.css
@@ -339,19 +339,21 @@ section {
    text-align: initial;
    flex-wrap: wrap;
    flex-direction: row;
-   gap: 2.5rem;
-   justify-content: space-around;
+   gap: 2rem;
+   justify-content: center;
 }
 
 article {
    display: flex;
    width: 10rem;
-   justify-content: space-around;
+   /* justify-content: center; */
    gap: 0.5rem;
+   align-items: center;
 }
 
 article .icon {
    cursor: default;
+   max-width: 100%;
 }
 
 /* PROJECTS SECTION */
